// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«rk»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«rm»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«ro»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«rr»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«rt»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«rv»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r10»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="true"
          id="tab-«r11»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«r12»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«r13»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <p data-variant="default">
          Oversikt over prøver for Schweigaardsgate skole.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Prøver
            </h2>
            <div>
              <a
                href="/"
                data-variant="default"
                data-color="neutral"
              >
                <h2>
                  Administrer prøve X
                </h2>
              </a>
              <a
                href="/"
                data-variant="default"
                data-color="neutral"
              >
                <h2>
                  Administrer prøve Y
                </h2>
              </a>
            </div>
            <div>
              <div
                role="radiogroup"
                tabindex="0"
              >
                <button
                  data-variant="primary"
                  type="button"
                  value="graph"
                  id="togglegroup-item-«r16»"
                  aria-checked="true"
                  aria-current="true"
                  role="radio"
                  name="togglegroup-name-«r14»"
                  data-roving-tabindex-item="true"
                  tabindex="0"
                >
                  Vis som graf
                </button>
                <button
                  data-variant="tertiary"
                  type="button"
                  value="table"
                  id="togglegroup-item-«r18»"
                  aria-checked="false"
                  aria-current="false"
                  role="radio"
                  name="togglegroup-name-«r14»"
                  data-roving-tabindex-item="true"
                  tabindex="-1"
                >
                  Vis som tabell
                </button>
              </div>
              <button
                data-variant="tertiary"
                type="button"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
                Last ned PDF
              </button>
            </div>
            <div
              data-highcharts-chart="0"
              style="overflow: hidden;"
            >
              <div
                id="highcharts-97d45fv-0"
                dir="ltr"
                style="position: relative; overflow: hidden; width: 786px; height: 400px; text-align: left; line-height: normal; z-index: 0; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none; touch-action: manipulation; outline: none; padding: 0px; font-family: Inter, sans-serif;"
              >
                <svg
                  version="1.1"
                  style="font-family: Inter, sans-serif; font-size: 1rem;"
                  xmlns="http://www.w3.org/2000/svg"
                  width="786"
                  height="400"
                  viewbox="0 0 786 400"
                  role="img"
                  aria-label="Prøver"
                >
                  <desc>
                    Created with Highcharts 12.2.0
                  </desc>
                  <defs>
                    <filter id="highcharts-drop-shadow-0">
                      <feDropShadow
                        dx="1"
                        dy="1"
                        flood-color="#000000"
                        flood-opacity="0.75"
                        stddeviation="2.5"
                      >
                      </feDropShadow>
                    </filter>
                  </defs>
                  <rect
                    fill="#ffffff"
                    filter="none"
                    x="0"
                    y="0"
                    width="786"
                    height="400"
                    rx="0"
                    ry="0"
                  >
                  </rect>
                  <rect
                    fill="none"
                    x="10"
                    y="10"
                    width="766"
                    height="375"
                    filter="none"
                  >
                  </rect>
                  <rect
                    fill="none"
                    data-z-index="1"
                    stroke="#cccccc"
                    stroke-width="0"
                    x="10"
                    y="10"
                    width="766"
                    height="375"
                  >
                  </rect>
                  <g
                    data-z-index="3"
                    filter="none"
                  >
                    <g
                      data-z-index="0.1"
                      opacity="1"
                      transform="translate(10,10) scale(1 1)"
                      filter="none"
                      style="cursor: pointer;"
                    >
                      <path
                        fill="#5BA27E"
                        d="M 382.9999983274896 54.37363139862845 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.001366949949 54.37226279020473 A 133.12773721681316 133.12773721681316 0 0 1 383.0314687700087 54.37226650248502 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.0328370548616 54.37363544843538 L 383.0328370548616 54.37363544843538 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.0314681229847 54.375003719221695 A 133.125 133.125 0 0 0 383.0013669218434 54.375000007017746 A 0.0013686084065795967 0.0013686084065795967 0 0 1 382.9999983274896 54.37363139862845 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#6C7C94"
                        d="M 383.0328370548616 54.37363544843538 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.0342060148786 54.372267177656 A 133.12773721681316 133.12773721681316 0 0 1 383.0502245643488 54.372272257196556 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.0515926563232 54.37364139590514 L 383.0515926563232 54.37364139590514 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.05022353169005 54.37500947381491 A 133.125 133.125 0 0 0 383.0342053115745 54.375004394378806 A 0.0013686084065795967 0.0013686084065795967 0 0 1 383.0328370548616 54.37363544843538 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                    </g>
                    <g
                      data-z-index="0.1"
                      opacity="1"
                      transform="translate(10,10) scale(1 1)"
                    >
                    </g>
                  </g>
                  <text
                    x="393"
                    data-z-index="4"
                    text-align="center"
                    y="25"
                    text-anchor="middle"
                    transform-origin="10 22"
                    transform="translate(0,0) scale(1 1)"
                    style="font-size: 1.2em; font-weight: bold; display: none; fill: rgb(51, 51, 51);"
                  >
                    Prøver
                  </text>
                  <text
                    x="393"
                    data-z-index="4"
                    text-align="center"
                    y="24"
                    text-anchor="middle"
                    transform-origin="10 15"
                    transform="translate(0,0) scale(1 1)"
                    style="font-size: 0.8em; fill: rgb(102, 102, 102);"
                  >
                  </text>
                  <text
                    x="10"
                    text-anchor="start"
                    data-z-index="4"
                    style="font-size: 0.8em; fill: rgb(102, 102, 102);"
                    text-align="left"
                    y="397"
                    transform-origin="10 15"
                    transform="translate(0,0) scale(1 1)"
                  >
                  </text>
                  <g
                    data-z-index="6"
                    opacity="0"
                    transform="translate(10,10) scale(1 1)"
                    style="cursor: pointer;"
                  >
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#5BA27E"
                      d="M 558.5559991289722 265.3903149378537 L 553.5559991289722 265.3903149378537 L 546.2789431661361 262.0669948338386 L 544.459679175427 261.2361648078348"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#6C7C94"
                      d="M 207.44400087102778 109.60968506214635 L 212.44400087102778 109.60968506214635 L 219.7210568338639 112.93300516616145 L 221.54032082457294 113.76383519216522"
                    >
                    </path>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(564,253)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                          style
                        >
                          Utsendte: 3500
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Utsendte: 3500
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(505,242)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="19"
                        style="font-size: 0.9em; font-weight: bold; fill: rgb(255, 255, 255);"
                      >
                        <tspan
                          fill="#000000"
                          stroke="#000000"
                          stroke-width="2px"
                          stroke-linejoin="round"
                          style
                        >
                          64%
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        64%
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(100,98)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                          style
                        >
                          Påbegynte: 2000
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Påbegynte: 2000
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(222,112)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="19"
                        style="font-size: 0.9em; font-weight: bold; fill: rgb(255, 255, 255);"
                      >
                        <tspan
                          fill="#000000"
                          stroke="#000000"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          36%
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        36%
                      </text>
                    </g>
                  </g>
                  <g
                    data-z-index="7"
                    visibility="hidden"
                  >
                    <rect
                      fill="none"
                      rx="0"
                      ry="0"
                      stroke="#999999"
                      stroke-width="0"
                      filter="none"
                      x="0"
                      y="0"
                      width="8"
                      height="8"
                    >
                    </rect>
                    <g data-z-index="1">
                      <g>
                      </g>
                    </g>
                  </g>
                  <text
                    x="776"
                    text-anchor="end"
                    data-z-index="8"
                    text-align="right"
                    y="395"
                    style="cursor: pointer; font-size: 0.6em; fill: rgb(153, 153, 153);"
                  >
                    Highcharts.com
                  </text>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r1c»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r1e»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r1g»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r1j»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«r1l»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«r1n»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r1o»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«r1p»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="true"
          id="tab-«r1q»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«r1r»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <p data-variant="default">
          Oversikt over prøvesvar for Schweigaardsgate skole.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Karakterfordeling prøvesvar
            </h2>
            <div>
              <div
                role="radiogroup"
                tabindex="0"
              >
                <button
                  data-variant="primary"
                  type="button"
                  value="graph"
                  id="togglegroup-item-«r1u»"
                  aria-checked="true"
                  aria-current="true"
                  role="radio"
                  name="togglegroup-name-«r1s»"
                  data-roving-tabindex-item="true"
                  tabindex="0"
                >
                  Vis som graf
                </button>
                <button
                  data-variant="tertiary"
                  type="button"
                  value="table"
                  id="togglegroup-item-«r20»"
                  aria-checked="false"
                  aria-current="false"
                  role="radio"
                  name="togglegroup-name-«r1s»"
                  data-roving-tabindex-item="true"
                  tabindex="-1"
                >
                  Vis som tabell
                </button>
              </div>
              <button
                data-variant="tertiary"
                type="button"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
                Last ned PDF
              </button>
            </div>
            <div
              data-highcharts-chart="1"
              style="overflow: hidden;"
            >
              <div
                id="highcharts-97d45fv-7"
                dir="ltr"
                style="position: relative; overflow: hidden; width: 786px; height: 400px; text-align: left; line-height: normal; z-index: 0; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none; touch-action: manipulation; outline: none; padding: 0px; font-family: Inter, sans-serif;"
              >
                <svg
                  version="1.1"
                  style="font-family: Inter, sans-serif; font-size: 1rem;"
                  xmlns="http://www.w3.org/2000/svg"
                  width="786"
                  height="400"
                  viewbox="0 0 786 400"
                  role="img"
                  aria-label="Karakterfordeling"
                >
                  <desc>
                    Created with Highcharts 12.2.0
                  </desc>
                  <defs>
                    <filter id="highcharts-drop-shadow-1">
                      <feDropShadow
                        dx="1"
                        dy="1"
                        flood-color="#000000"
                        flood-opacity="0.75"
                        stddeviation="2.5"
                      >
                      </feDropShadow>
                    </filter>
                  </defs>
                  <rect
                    fill="#ffffff"
                    filter="none"
                    x="0"
                    y="0"
                    width="786"
                    height="400"
                    rx="0"
                    ry="0"
                  >
                  </rect>
                  <rect
                    fill="none"
                    x="10"
                    y="10"
                    width="766"
                    height="375"
                    filter="none"
                  >
                  </rect>
                  <rect
                    fill="none"
                    data-z-index="1"
                    stroke="#cccccc"
                    stroke-width="0"
                    x="10"
                    y="10"
                    width="766"
                    height="375"
                  >
                  </rect>
                  <g
                    data-z-index="3"
                    filter="none"
                  >
                    <g
                      data-z-index="0.1"
                      opacity="1"
                      transform="translate(10,10) scale(1 1)"
                      filter="none"
                      style="cursor: pointer;"
                    >
                      <path
                        fill="#5BA27E"
                        d="M 382.99999999998437 197.49654692183697 A 2.411604622237482e-8 2.411604622237482e-8 0 0 1 383.0000000241006 197.49654689772095 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.0000000241006 197.49654689772095 A 2.411604622237482e-8 2.411604622237482e-8 0 0 1 383.00000004821646 197.4965469218373 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#6C7C94"
                        d="M 383.00000004821595 197.49654695791534 A 6.01936359065188e-8 6.01936359065188e-8 0 0 1 383.0000001084115 197.49654689772254 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.0000001084115 197.49654689772254 A 6.01936359065188e-8 6.01936359065188e-8 0 0 1 383.00000016860326 197.49654695791912 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#BB893E"
                        d="M 383.00000016860275 197.49654696758077 A 6.985509411491305e-8 6.985509411491305e-8 0 0 1 383.0000002384627 197.49654689772908 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.0000002384627 197.49654689772908 A 6.985509411491305e-8 6.985509411491305e-8 0 0 1 383.00000030831296 197.4965469675904 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#353535"
                        d="M 383.00000030831296 197.49654696762875 A 6.989343312716887e-8 6.989343312716887e-8 0 0 1 383.00000037821405 197.49654689774155 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.00000037821405 197.49654689774155 A 6.989343312716887e-8 6.989343312716887e-8 0 0 1 383.0000004480998 197.49654696764406 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#30A1BB"
                        d="M 383.0000004481073 197.49654690978883 A 1.2038895069306218e-8 1.2038895069306218e-8 0 0 1 383.0000004601478 197.4965468977515 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.0000004601478 197.4965468977515 A 1.2038895069306218e-8 1.2038895069306218e-8 0 0 1 383.0000004721851 197.49654690979204 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                      <path
                        fill="#255F41"
                        d="M 383.0000004721861 197.4965469025457 A 4.7925638267925755e-9 4.7925638267925755e-9 0 0 1 383.0000004769793 197.4965468977538 A 0.0034531022791508548 0.0034531022791508548 0 0 1 383.0000004769793 197.4965468977538 A 4.7925638267925755e-9 4.7925638267925755e-9 0 0 1 383.0000004817712 197.49654690254704 L 383 197.5 A 0 0 0 0 1 383 197.5 A 0 0 0 0 0 383 197.5 A 0 0 0 0 1 383 197.5 Z"
                        transform="translate(0,0)"
                        stroke="#ffffff"
                        stroke-width="1"
                        opacity="1"
                        stroke-linejoin="round"
                      >
                      </path>
                    </g>
                    <g
                      data-z-index="0.1"
                      opacity="1"
                      transform="translate(10,10) scale(1 1)"
                    >
                    </g>
                  </g>
                  <text
                    x="393"
                    data-z-index="4"
                    text-align="center"
                    y="25"
                    text-anchor="middle"
                    transform-origin="10 22"
                    transform="translate(0,0) scale(1 1)"
                    style="font-size: 1.2em; font-weight: bold; display: none; fill: rgb(51, 51, 51);"
                  >
                    Karakterfordeling
                  </text>
                  <text
                    x="393"
                    data-z-index="4"
                    text-align="center"
                    y="24"
                    text-anchor="middle"
                    transform-origin="10 15"
                    transform="translate(0,0) scale(1 1)"
                    style="font-size: 0.8em; fill: rgb(102, 102, 102);"
                  >
                  </text>
                  <text
                    x="10"
                    text-anchor="start"
                    data-z-index="4"
                    style="font-size: 0.8em; fill: rgb(102, 102, 102);"
                    text-align="left"
                    y="397"
                    transform-origin="10 15"
                    transform="translate(0,0) scale(1 1)"
                  >
                  </text>
                  <g
                    data-z-index="6"
                    opacity="0"
                    transform="translate(10,10) scale(1 1)"
                    style="cursor: pointer;"
                  >
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#5BA27E"
                      d="M 445.32265245655276 21.079016227249017 L 440.32265245655276 21.079016227249017 L 432.906244591554 43.9043726183327 L 431.0521426253043 49.61071171610362"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#6C7C94"
                      d="M 571.216187180398 168.48140673503718 L 566.216187180398 168.48140673503718 L 542.5116670061149 172.23583389600273 L 536.585536962544 173.1744406862441"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#BB893E"
                      d="M 472.2415602844093 362.76829557071204 L 467.2415602844094 362.76829557071204 L 456.34238267348843 341.3858745804312 L 453.61758827075823 336.04026933286104"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#353535"
                      d="M 196.96744066036234 157.03442872094146 L 201.96744066036246 157.03442872094146 L 225.38944294689227 162.26986651445847 L 231.24494351852476 163.57872596283772"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#30A1BB"
                      d="M 286.7421236276013 36 L 336.0799126377955 36 L 337.94293637466444 42.412569763173714 L 339.6168830108998 48.174331877235375"
                    >
                    </path>
                    <path
                      fill="none"
                      stroke-width="1"
                      stroke="#255F41"
                      d="M 366.3523586273127 12 L 371.32932922444803 12 L 372.8593310960159 36.318683358834136 L 373.2360742131918 42.30684372940377"
                    >
                    </path>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(450,9)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 6
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 6
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(576,156)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 5
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 5
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(477,351)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 4
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 4
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(126,145)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 3
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 3
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(216,24)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 2
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 2
                      </text>
                    </g>
                    <g
                      data-z-index="1"
                      filter="none"
                      style="cursor: pointer;"
                      transform="translate(296,0)"
                    >
                      <text
                        x="5"
                        data-z-index="1"
                        y="16"
                        style="font-size: 0.7em; font-weight: 500; fill: rgb(0, 0, 0);"
                      >
                        <tspan
                          fill="#FFFFFF"
                          stroke="#FFFFFF"
                          stroke-width="2px"
                          stroke-linejoin="round"
                        >
                          Karakter 1
                          <tspan
                            x="5"
                            dy="0"
                          >
                            ​
                          </tspan>
                        </tspan>
                        Karakter 1
                      </text>
                    </g>
                  </g>
                  <g
                    data-z-index="7"
                    visibility="hidden"
                  >
                    <rect
                      fill="none"
                      rx="0"
                      ry="0"
                      stroke="#999999"
                      stroke-width="0"
                      filter="none"
                      x="0"
                      y="0"
                      width="8"
                      height="8"
                    >
                    </rect>
                    <g data-z-index="1">
                      <g>
                      </g>
                    </g>
                  </g>
                  <text
                    x="776"
                    text-anchor="end"
                    data-z-index="8"
                    text-align="right"
                    y="395"
                    style="cursor: pointer; font-size: 0.6em; fill: rgb(153, 153, 153);"
                  >
                    Highcharts.com
                  </text>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r24»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r26»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r28»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r2b»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«r2d»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«r2f»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r2g»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«r2h»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«r2i»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="true"
          id="tab-«r2j»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Story 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r2»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r4»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r6»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r9»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«rb»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«rd»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="true"
          id="tab-«re»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«rf»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«rg»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«rh»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div
        role="tabpanel"
        tabindex="0"
      >
        <p data-variant="default">
          Her får du en oversikt over all den overordnede informasjonen.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Prøveoversikt
            </h2>
            <span
              aria-hidden="true"
              data-variant="rectangle"
              style="width: 250px;"
            >
            </span>
            <span
              aria-hidden="true"
              data-variant="rectangle"
              style="width: 250px;"
            >
            </span>
            <div>
              <svg
                aria-label="laster inn"
                role="img"
                viewbox="0 0 50 50"
                data-size="lg"
              >
                <circle
                  cx="25"
                  cy="25"
                  r="20"
                  fill="none"
                  stroke-width="5"
                >
                </circle>
                <circle
                  cx="25"
                  cy="25"
                  r="20"
                  fill="none"
                  stroke-width="5"
                >
                </circle>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
